# sortmedia

./: .bignore  .gitignore  .gitmodules  CMakeDefs.txt  CMakeLists.txt  CMakePresets.json  Dependencies.mk  LICENSE.txt  LoggingArchitecture.gv  Makefile  Pipfile  README.md  architecture.gv  bugs  conanfile.txt  config.h.in  designdoc.cls  designdoc.tex  find_taglib.cmake  format.tex
cmake/: Findtaglib.cmake  version.cmake  version.h.in
docs/: InterfaceLayer.gv  architecture.gv
fsadaptor/: CMakeLists.txt  IFilesystemAdaptor.h  IPathWalker.h  Path.cpp  Path.h  PathConstIter.cpp  PathWalker.h  StandardFilesystemAdaptor.cpp  StandardFilesystemAdaptor.h  config.h.in  namespace.h
include/: ArgumentParser.h  MediaSorter.h  fsadaptor_config.h.in
include/CrossCutting/Logging/: Logger.h  LoggerConfiguration.h  LoggerFactory.h  NullLogger.h
include/FSAdaptor/: IFilesystemAdaptor.h  IPathWalker.h  Path.h  PathWalker.h  StandardFilesystemAdaptor.h  namespace.h
include/SortMedia/: MediaSorter.h  Path.h
include/SortMedia/Adaptors/: StandardFilesystemAdaptor.h  TagLibAdaptor.h  TagLibFLACAdaptor.h
include/SortMedia/Exceptions/: ExceptionBase.h  OperationalError.h  PolicyVerificationError.h
include/SortMedia/Factories/: FileLocatorFactory.h  MusicTagEditorAdaptorFactory.h  OrganizationalSchemaFactory.h
include/SortMedia/FileLocators/: AnyFileLocator.h
include/SortMedia/FileTypes/: LibraryFile.h  MusicFile.h
include/SortMedia/Interfaces/: IFile.h  IFileLocator.h  IFileOperation.h  IFilesystemAdaptor.h  ILogger.h  IMusicTagEditorAdaptor.h  IOrganizationalPolicy.h  IOrganizationalSchema.h
include/SortMedia/Logging/: NullLogger.h  StreamLogger.h
include/SortMedia/Operations/: DeleteDirectoryIfEmpty.h  DeleteFile.h  RenameFile.h  Warn.h  WarnOperation.h
include/SortMedia/Policies/: BasicMusicFileNaming.h  BasicMusicFileNamingPolicy.h  DeleteDirectoryIfEmpty.h  DeleteFile.h  DoNothing.h  DoNothingPolicy.h  OrganizationalBase.h  OrganizationalPolicy.h  PolicyVerificationError.h  UnknownFileType.h  UnknownFileTypePolicy.h  VerificationError.h
include/SortMedia/Schemas/: BasicMusicOrganizationalSchema.h  OrganizationalSchema.h
include/interfaces/: IFileLocator.h  ILogger.h  IMediaFile.h
include/namespaces/: Adaptors.h  CrossCutting.h  Enums.h  Exceptions.h  Factories.h  FileLocators.h  Interfaces.h  Operations.h  Policies.h  Schemas.h  SortMedia.h
libsortmedia/: MediaSorter.cpp  MediaSorter.h  Path.h
libsortmedia/Adaptors/: TagLibAdaptor.cpp  TagLibAdaptor.h  TagLibFLACAdaptor.cpp  TagLibFLACAdaptor.h
libsortmedia/Exceptions/: ExceptionBase.h  OperationalError.cpp  OperationalError.h  PolicyVerificationError.cpp  PolicyVerificationError.h
libsortmedia/Factories/: FileLocatorFactory.cpp  FileLocatorFactory.h  MusicTagEditorAdaptorFactory.cpp  MusicTagEditorAdaptorFactory.h  OrganizationalSchemaFactory.cpp  OrganizationalSchemaFactory.h
libsortmedia/FileLocators/: AnyFileLocator.cpp  AnyFileLocator.h
libsortmedia/FileTypes/: LibraryFile.cpp  LibraryFile.h  MusicFile.cpp  MusicFile.h
libsortmedia/Interfaces/: IFile.h  IFileLocator.h  IFileOperation.h  ILogger.h  IMusicTagEditorAdaptor.h  IOrganizationalPolicy.h  IOrganizationalSchema.h
libsortmedia/Logging/: NullLogger.cpp  NullLogger.h  StreamLogger.cpp  StreamLogger.h
libsortmedia/Operations/: DeleteDirectoryIfEmpty.cpp  DeleteDirectoryIfEmpty.h  DeleteFile.cpp  DeleteFile.h  RenameFile.cpp  RenameFile.h  Warn.cpp  Warn.h
libsortmedia/Policies/: BasicMusicFileNaming.cpp  BasicMusicFileNaming.h  DeleteDirectoryIfEmpty.cpp  DeleteDirectoryIfEmpty.h  DeleteFile.cpp  DeleteFile.h  DoNothing.h  OrganizationalBase.cpp  OrganizationalBase.h  UnknownFileType.cpp  UnknownFileType.h
libsortmedia/Schemas/: BasicMusicOrganizationalSchema.cpp  BasicMusicOrganizationalSchema.h  OrganizationalSchema.cpp  OrganizationalSchema.h
libsortmedia/namespaces/: Adaptors.h  Exceptions.h  Factories.h  FileLocators.h  FileTypes.h  Interfaces.h  Logging.h  Operations.h  Policies.h  Schemas.h  SortMedia.h
sortlibrary/: config.h.in  main.cpp
source/: ArgumentParser.cpp  MediaSorter.cpp  Path.cpp  PathConstIter.cpp  StandardFilesystemAdaptor.cpp  main.cpp
source/CrossCutting/Logging/: LoggerConfiguration.cpp  LoggerFactory.cpp  NullLogger.cpp
source/SortMedia/: MediaSorter.cpp  Path.cpp
source/SortMedia/Adaptors/: StandardFilesystemAdaptor.cpp  TagLibAdaptor.cpp  TagLibFLACAdaptor.cpp
source/SortMedia/Exceptions/: OperationalError.cpp  PolicyVerificationError.cpp
source/SortMedia/Factories/: FileLocatorFactory.cpp  MusicTagEditorAdaptorFactory.cpp  OrganizationalSchemaFactory.cpp
source/SortMedia/FileLocators/: AnyFileLocator.cpp
source/SortMedia/FileTypes/: LibraryFile.cpp  MusicFile.cpp
source/SortMedia/Logging/: NullLogger.cpp  StreamLogger.cpp
source/SortMedia/Operations/: DeleteDirectoryIfEmpty.cpp  DeleteFile.cpp  RenameFile.cpp  Warn.cpp  WarnOperation.cpp
source/SortMedia/Policies/: BasicMusicFileNaming.cpp  BasicMusicFileNamingPolicy.cpp  DeleteDirectoryIfEmpty.cpp  DeleteFile.cpp  OrganizationalBase.cpp  OrganizationalPolicy.cpp  PolicyVerificationError.cpp  UnknownFileType.cpp  UnknownFileTypePolicy.cpp  VerificationError.cpp
source/SortMedia/Schemas/: BasicMusicOrganizationalSchema.cpp  OrganizationalSchema.cpp
src/: convert.cpp  convert.cxx  convert.h  library.cpp  library.cxx  library.h  main.cpp  main.cxx  metadata.cpp  metadata.cxx  metadata.h  policy.cxx  policy.h  service.cxx  service.h
test/: CMakeLists.txt  TestMain.cpp
test/FileLocator/: AnyFileLocatorTest.cpp  AnyFileLocatorTest.h
test/Logging/: LogSystemTest.cpp  LogSystemTest.h
test/MockFilesystemAdaptor/: MockFSAdaptorWalker.h
test/Path/: UnixAbsolutePathTest.cpp  UnixAbsolutePathTest.h  UnixHiddenFilePathTest.cpp  UnixHiddenFilePathTest.h  UnixNoExtensionPathTest.cpp  UnixNoExtensionPathTest.h  UnixRelativeCurrentPathTest.cpp  UnixRelativeCurrentPathTest.h  UnixRelativeParentPathTest.cpp  UnixRelativeParentPathTest.h
test/testData/: TestFileList.txt
